--- a/.github/workflows/weekly_build.yml
+++ b/.github/workflows/weekly_build.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - run: "git push origin main:rel/Test-2.5.0"
+          #      - run: "git push origin main:rel/Test-2.5.0"
+      - run: " git status" 
